# electionguard-cpp

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Makefile  README.md  make-environment-linux.sh
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  generic_issue.md
.github/workflows/: codeql-analysis.yml  pull-request.yml  release.yml
apps/demo_in_c/: CMakeLists.txt  main.c
apps/demo_in_cpp/: CMakeLists.txt  main.cpp
apps/demo_in_swift/ElectionGuardDemo/ElectionGuardDemo/: AppDelegate.swift  Constants.swift  ElectionGuard.swift  ElectionGuardDemo-Bridging-Header.h  SceneDelegate.swift  ViewController.swift
apps/demo_in_swift/ElectionGuardDemo/ElectionGuardDemo.xcodeproj/: project.pbxproj
apps/demo_in_xamarin/ElectionGuardCore/: ElectionGuardCore.sln
apps/demo_in_xamarin/ElectionGuardCore/ElectionGuardCore.Android/: ElectionGuardCore.Android.csproj  MainActivity.cs
apps/demo_in_xamarin/ElectionGuardCore/ElectionGuardCore.Ui.Forms/: App.xaml  App.xaml.cs  (+7 more)
apps/demo_in_xamarin/ElectionGuardCore/ElectionGuardCore.Ui.Forms.Android/: ElectionGuardCore.Ui.Forms.Android.csproj  MainActivity.cs
apps/demo_in_xamarin/ElectionGuardCore/ElectionGuardCore.Ui.Forms.iOS/: AppDelegate.cs  ElectionGuardCore.Ui.Forms.iOS.csproj  Info.plist  Main.cs
bindings/netframework/ElectionGuard.NetFramework/: ElectionGuard.NetFramework.x64.sln  ElectionGuard.NetFramework.x86.sln
bindings/netstandard/ElectionGuard/: ElectionGuard.sln  README.md
cmake/: FindGMP.cmake  FindValgrind.cmake  toolchain.windows.mingw.aarch64.cmake  toolchain.windows.mingw.x64.cmake  tools.cmake
docs/: Design_and_Architecture.md  Platforms.md  Project_Workflow.md
include/electionguard/: ballot.h  ballot.hpp  ballot_code.h  ballot_code.hpp  ballot_compact.h  ballot_compact.hpp  chaum_pedersen.h  chaum_pedersen.hpp  collections.h  constants.h  crypto_hashable.hpp  election.h  election.hpp  election_object_base.h  election_object_base.hpp  elgamal.h  elgamal.hpp  encrypt.h  encrypt.hpp  export.h  group.h  group.hpp  hash.h  hash.hpp  hmac.hpp  manifest.h  manifest.hpp  plaintext_ballot.generated.h  plaintext_ballot_contest.generated.h  plaintext_ballot_selection.generated.h  precompute_buffers.hpp  status.h  tracker.h  tracker.hpp
include/kremlin/internal/: target.h
src/: CMakeLists.txt
src/electionguard/: async.hpp  ballot.cpp  ballot_code.cpp  ballot_compact.cpp  ballot_facade.cpp  chaum_pedersen.cpp  chaum_pedersen_facade.cpp  convert.cpp  convert.hpp  election.cpp  election_facade.cpp  elgamal.cpp  elgamal_facade.cpp  encrypt.cpp  encrypt_facade.cpp  group.cpp  group_facade.cpp  hash.cpp  hash.hpp  hash_facade.cpp  hmac.cpp  log.cpp  log.hpp  lookup_table.hpp  manifest.cpp  nonces.cpp  nonces.hpp  precompute_buffers.cpp  random.hpp  serialize.hpp  tracker.cpp  tracker_facade.cpp  utils.cpp  utils.hpp  variant_cast.hpp  words.cpp  words.hpp
src/electionguard/facades/: Hacl_Bignum256.cpp  Hacl_Bignum256.hpp  Hacl_Bignum4096.cpp  Hacl_Bignum4096.hpp  ballot.cpp  ballot_code.cpp  ballot_compact.cpp  chaum_pedersen.cpp  collections.c  election.cpp  elgamal.cpp  encrypt.cpp  group.cpp  hash.cpp  manifest.cpp  memory_cache.hpp  tracker.cpp
src/interop-generator/: ElectionGuard.InteropGenerator.sln
src/interop-generator/ElectionGuard.InteropGenerator/: ClassGenerator.cs  CppClassGenerator.cs  CsClassGenerator.cs  CsClassGenerator.tt  CsClassGeneratorPartial.cs  EgClass.cs  EgInteropClasses.json  EgMethod.cs  EgProperty.cs  ElectionGuard.InteropGenerator.csproj  GeneratedClass.cs  GlobalUsings.cs  InteropClassGenerator.cs  InteropClassesGenerator.cs  InteropGenerator.cs  OutputType.cs  Program.cs  Properties.json  Properties.txt
src/interop-generator/ElectionGuard.InteropGenerator/FileGenerators/: CFileGenerator.cs  CsFileGenerator.cs  FileGeneratorBase.cs
src/interop-generator/ElectionGuard.InteropGenerator/Helpers/: NameHelpers.cs  TypeHelper.cs
src/interop-generator/ElectionGuard.InteropGenerator/Models/: EgClass.cs  EgMethod.cs  EgParam.cs  EgProperty.cs  GeneratedClass.cs
src/interop-generator/ElectionGuard.InteropGenerator/Templates/: CHeaderTemplate.cs  CHeaderTemplate.tt  CHeaderTemplatePartial.cs  CppClassTemplate.cs  CppClassTemplate.tt  CsClassTemplate.cs  CsClassTemplate.tt  CsClassTemplatePartial.cs
src/karamel/: Hacl_Bignum.c  Hacl_Bignum256.h  Hacl_Bignum256_32.h  Hacl_Bignum4096.h  Hacl_Bignum4096_32.h  Hacl_GenericField32.c  Hacl_GenericField32.h  Hacl_GenericField64.c  Hacl_GenericField64.h  Hacl_HMAC_DRBG.h  Hacl_IntTypes_Intrinsics.h  Hacl_Krmllib.h  Hacl_Spec.h  Hacl_Streaming_SHA2.h  Lib_Memzero0.c  Lib_Memzero0.h  Lib_RandomBuffer_System.h  lib_intrinsics.h
src/karamel/internal/: Hacl_Bignum.h  Hacl_HMAC.h  Hacl_Hash.h
src/kremlin/: Hacl_Bignum.c  Hacl_Bignum.h  Hacl_Bignum256.c  Hacl_Bignum4096.c  Hacl_GenericField64.c  Hacl_GenericField64.h
test/: CMakeLists.txt  main.c
test/electionguard/: test_ballot.c  test_ballot.cpp  test_ballot_code.c  test_ballot_code.cpp  test_ballot_compact.cpp  test_chaum_pedersen.c  test_chaum_pedersen.cpp  test_collections.c  test_constants.cpp  test_election.c  test_election.cpp  test_elgamal.c  test_elgamal.cpp  test_encrypt.c  test_encrypt.cpp  test_encrypt_compact.c  test_encrypt_compact.cpp  test_group.c  test_group.cpp  test_hacl.cpp  test_hash.c  test_hash.cpp  test_manifest.c  test_manifest.cpp  test_nonces.cpp  test_tracker.c  test_tracker.cpp  test_words.cpp
test/electionguard/benchmark/: bench_chaum_pedersen.cpp  bench_elgamal.cpp  bench_encrypt.cpp  bench_group.cpp  bench_hacl.cpp  bench_hash.cpp  bench_hashed_elgamal.cpp  bench_nonces.cpp  bench_precompute.cpp
test/electionguard/generators/: ballot.cpp  ballot.h  ballot.hpp  election.cpp  election.h  election.hpp  manifest.cpp  manifest.h  manifest.hpp
test/electionguard/mocks/: ballot.cpp  ballot.h  ballot.hpp  election.cpp  election.h  election.hpp  manifest.cpp  manifest.h  manifest.hpp  words.cpp  words.hpp
test/electionguard/utils/: byte_logger.hpp  constants.hpp  utils.h
(+271 files in other folders)
